bug: mobile-overflow fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,9 +26,11 @@
       top: -5px;
       width: 100%; }
   .about .wrapper {
-    display: flex;
-    justify-content: center;
     margin: 75px 0 100px; }
+    @media only screen and (min-width: 960px) {
+      .about .wrapper {
+        display: flex;
+        justify-content: center; } }
   .about p {
     font-family: "Open Sans", sans-serif;
     margin-bottom: 50px;
@@ -525,7 +527,7 @@ body {
 .skill-set {
   color: black; }
   .skill-set .container {
-    padding: 50px;
+    padding: 50px 24px;
     border-bottom: 24px solid black;
     border-left: 16px solid black;
     border-right: 16px solid black;
@@ -606,12 +608,13 @@ body {
     height: 300px;
     margin: 0 auto 30px;
     position: relative;
-    width: 300px;
     border: 5px solid black;
-    box-shadow: 0 10px 7px -5px rgba(0, 0, 0, 0.3); }
+    box-shadow: 0 10px 7px -5px rgba(0, 0, 0, 0.3);
+    width: auto; }
     @media only screen and (min-width: 960px) {
       .skill-set .art-container {
-        margin: 0; } }
+        margin: 0;
+        width: 300px; } }
   .skill-set .art {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5) inset;
     display: flex;
